update to basis project

--- a/src/app/modules/todo/pages/todo-overview-page/todo-overview-page.component.html
+++ b/src/app/modules/todo/pages/todo-overview-page/todo-overview-page.component.html
@@ -17,7 +17,7 @@
   
       <ng-container matColumnDef="task">
         <mat-header-cell *matHeaderCellDef> Amount of task </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.tasks.length}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{ element | countTasks}} </mat-cell>
       </ng-container>
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
