--- a/src/app/modules/todo/pages/todo-detail/todo-detail.component.html
+++ b/src/app/modules/todo/pages/todo-detail/todo-detail.component.html
@@ -41,8 +41,8 @@
         </div>
       
         <mat-card-actions align="start">
-            <button mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
+            <button mat-button>DISCARD</button>
+            <button mat-button>SAVE</button>
           </mat-card-actions>
     </mat-card-content>
 </mat-card>
